# social-media-app

./: .gitignore  README.md  todo.txt
backend/: pyproject.toml
backend/socilink/: manage.py
backend/socilink/account_api/: models.py
backend/socilink/api/: consumers.py  models.py  serializers.py
backend/socilink/chat_api/: consumers.py  models.py  routing.py
backend/socilink/socilink/: asgi.py  settings.py  urls.py  wsgi.py
